tests/negative/continue_outside_loop.sans
// expect-error: continue
main() I {
  continue
  0
}
